--- a/index.html
+++ b/index.html
@@ -1,11 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ColmarAcademy</title>
-</head>
-<body>
-  <h1>Ruby</h1>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="style.css" rel="stylesheet" />
+    <title>Colmar Academy</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <div class="branding">
+          <img class="logo" src="images/ic-logo.svg" />
+          <h1>
+            <span class="logo-colmar">Colmar</span
+            ><span class="logo-academy">Academy</span>
+          </h1>
+        </div>
+        <ul>
+          <li><a href="#">On campus</a></li>
+          <li><a href="#">Online</a></li>
+          <li><a href="#">For companies</a></li>
+          <li><a href="#">Sign in</a></li>
+        </ul>
+        <div class="mobile-menu">
+          <div>
+            <img src="images/ic-logo.svg" />
+          </div>
+          <div>
+            <img src="images/ic-on-campus.svg" />
+          </div>
+          <div>
+            <img src="images/ic-online.svg" />
+          </div>
+          <div>
+            <img src="images/ic-login.svg" />
+          </div>
+        </div>
+      </nav>
+    </header>
+  </body>
 </html>
