Add Main Section

--- a/index.html
+++ b/index.html
@@ -38,5 +38,61 @@
         </div>
       </nav>
     </header>
+    <main>
+      <section class="hero">
+        <div class="hero-image">
+          <img src="images/banner.jpg" />
+        </div>
+        <div class="hero-detail">
+          <h2>Learn something new everyday</h2>
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+          <a class="hero-button" href="#">Start here</a>
+        </div>
+      </section>
+
+      <section class="information">
+        <div class="information-highlight">
+          <img src="images/information-main.jpg" />
+          <h2>It doesn't hurt to keep practicing</h2>
+          <p class="information-quote">
+            "Curabitur vitae libero in ipusm porttitor consequat. Aliquam et
+            commodo lectus, nec consequat neque. Sed non accumsan urna.
+            Phasellus sed consequat ex. Etiam eget magna laoreet, efficitur
+            dolor consequat, tristique ligula"
+          </p>
+          <p class="information-cite">Emanuel, Sr Strategist at Hiring.com</p>
+        </div>
+        <div class="information-items">
+          <div class="information-item">
+            <img src="images/information-orientation.jpg" />
+            <div class="information-item-detail">
+              <h3>Orientation date</h3>
+              <p>Tue 10/11 & Wed 10/12: 8am-3pm</p>
+              <a href="#">Read more</a>
+            </div>
+          </div>
+          <div class="information-item">
+            <img src="images/information-campus.jpg" />
+            <div class="information-item-detail">
+              <h3>Our campus</h3>
+              <p>Find which campus is close by you</p>
+              <a href="#">Read more</a>
+            </div>
+          </div>
+          <div class="information-item">
+            <img src="images/information-guest-lecture.jpg" />
+            <div class="information-item-detail">
+              <h3>Our guest lecture</h3>
+              <p>
+                Join a keynote with Oliver Sack about music in medical treatment
+              </p>
+              <a href="#">Read more</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+
   </body>
 </html>
