Add Main section three

--- a/index.html
+++ b/index.html
@@ -91,6 +91,61 @@
           </div>
         </div>
       </section>
+      <section class="course">
+        <div class="course-heading">
+          <h2>Start learning</h2>
+        </div>
+        <div class="course-items">
+          <div class="course-item">
+            <img src="images/course-software.jpg" />
+            <div class="course-item-detail">
+              <h3>Software engineering</h3>
+              <p>COURSE</p>
+              <p>Wep Development, Mobile Development, IOT, APIs</p>
+            </div>
+          </div>
+          <div class="course-item">
+            <img src="images/course-computer-art.jpg" />
+            <div class="course-item-detail">
+              <h3>Computer art</h3>
+              <p>COURSE</p>
+              <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+            </div>
+          </div>
+          <div class="course-item">
+            <img src="images/course-design.jpg" />
+            <div class="course-item-detail">
+              <h3>Design</h3>
+              <p>COURSE</p>
+              <p>User Experience Design, User Research, Visual Design</p>
+            </div>
+          </div>
+          <div class="course-item">
+            <img src="images/course-data.jpg" />
+            <div class="course-item-detail">
+              <h3>Data</h3>
+              <p>COURSE</p>
+              <p>Data Science, Big Data, SQL, Data Visualization </p>
+            </div>
+          </div>
+          <div class="course-item">
+            <img src="images/course-business.jpg" />
+            <div class="course-item-detail">
+              <h3>Business</h3>
+              <p>COURSE</p>
+              <p>Product Development, Business Development, Startup</p>
+            </div>
+          </div>
+          <div class="course-item">
+            <img src="images/course-marketing.jpg" />
+            <div class="course-item-detail">
+              <h3>Marketing</h3>
+              <p>COURSE</p>
+              <p>Analytics, Content Marketing, Mobile Marketing</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
 
