Add HTML Full Version

--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@
             <div class="course-item-detail">
               <h3>Computer art</h3>
               <p>COURSE</p>
-              <p>Imaging & Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+              <p>
+                Imaging & Design, Web Design, Motion Graphics & Visual Effects,
+                Computer Animation
+              </p>
             </div>
           </div>
           <div class="course-item">
@@ -125,7 +128,7 @@
             <div class="course-item-detail">
               <h3>Data</h3>
               <p>COURSE</p>
-              <p>Data Science, Big Data, SQL, Data Visualization </p>
+              <p>Data Science, Big Data, SQL, Data Visualization</p>
             </div>
           </div>
           <div class="course-item">
@@ -146,8 +149,54 @@
           </div>
         </div>
       </section>
+      <section class="thesis">
+        <div class="head-thesis">
+          <h2>Thesis exhibit</h2>
+        </div>
+        <div class="content-thesis">
+          <div class="content-thesis-videos">
+            <div class="content-thesis-video">
+              <video src="videos/thesis.mp4" controls></video>
+              <div class="video-detail">
+                <h3>Reimagine urban</h3>
+                <p>
+                  "Curabitur vitae libero in ipusm porttitor consequat. Aliquam
+                  et commodo lectus, nec consequat neque. Sed non accumsan urna.
+                  Phasellus sed consequat ex. Etiam eget magna laoreet,
+                  efficitur dolor consequat, tristique ligula"
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="content-thesis-items">
+            <div class="content-thesis-item">
+              <img src="images/thesis-fisma.jpg" />
+              <div class="thesis-detail">
+                <h3>Fisma: Design and Prototype</h3>
+                <p>Designer showcase of new prototype product</p>
+              </div>
+            </div>
+            <div class="content-thesis-item">
+              <img src="images/thesis-now-and-then.jpg" />
+              <div class="thesis-detail">
+                <h3>Now and then</h3>
+                <p>Research study about New York</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
-
-
+    <footer>
+      <div class="copyright">
+        <div class="copyright_left">
+          <p>© 2016 Colmar Academy All rights reserved</p>
+        </div>
+        <div class="copyright_right">
+          <a href="#">Terms</a>
+          <a href="#">Privacy</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
